Use KFileItem::text() instead of KFileItem::name().

This way Nepomuk search results get their proper user readable names.
BUG: 287472
REVIEW: 103237